--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   url_strategy: ^0.2.0
   url_launcher: ^6.2.2  # Added for WhatsApp functionality
   share_plus: ^7.2.1    # Added for native sharing functionality
+  animated_text_kit:
 
 # Local Notifications for Admin
 
