--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "@sendgrid/mail": "^8.1.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "firebase-admin": "^13.4.0"
+    "firebase-admin": "^13.4.0",
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
